idea: slopeless SW alignment

--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -2663,19 +2663,19 @@
       for (let i = 1; i <= nSpeakers; i++) {
         mlpSPIndices.push(cmdIdMLPIndices[commandId[i]]);
       }
-      const meanUsableXO = getGeomMean([minXO, maxXO]); // midpoint of usable XO range
-      const avgInitialXO = getGeomMean(customCrossover.slice(1)); // average initial XO
-      const alignXO = Math.max(meanUsableXO, avgInitialXO); // higher frequencies are less affected by group delay
       // prepare "average" speaker
       const avgSpeaker = await postNext('Magn plus phase average', Array.from(mlpSPIndices));
       const avgSpeakerIdx = Object.keys(avgSpeaker.results)[0]
-      const avgSpeakerWithHPF = await genSpeaker(avgSpeakerIdx, alignXO);
-      const avgSpeakerWithHPFIdx = Object.keys(avgSpeakerWithHPF.results)[0];
       // prepare subwoofer
-      const subwooferWithLPF = await genSub(cmdIdMLPIndices[commandId[nChannels]], alignXO);
-      const subwooferWithLPFIdx = Object.keys(subwooferWithLPF.results)[0];
+      const measurements = await fetch_mREW();
+      const mCount = Object.keys(measurements).length;
+      await genSub(cmdIdMLPIndices[commandId[nChannels]]); // make a copy
+      const subwooferIdx = mCount + 1;
+      // use an octave on either side of the alignment XO as evaluation range
+      const startFreq = Math.round(minXO / 1.5);
+      const endFreq = Math.round(maxXO * 1.5);
       // set delay limits based on first IR peak delta to prioritize time alignment
-      const subwooferIRPeak = await getFirstIRPeak(subwooferWithLPFIdx); // first IR peak
+      const subwooferIRPeak = await getFirstIRPeak(subwooferIdx); // first IR peak
       const IRPeakDelta = -1000 * subwooferIRPeak; // speakers are at t=0 by now
       let loDelayLimit = IRPeakDelta - minDelayRangeSpan * 2; // compensate for higher delays from LPF slope
       let hiDelayLimit = IRPeakDelta + minDelayRangeSpan;
@@ -2683,12 +2683,11 @@
       const [loDelay, hiDelay] = getDelayRangeOfFinalSub();
       loDelayLimit = Math.min(Math.max(loDelayLimit, loDelay), hiDelay);
       hiDelayLimit = Math.min(Math.max(hiDelayLimit, loDelay), hiDelay);
-      const [requiredDelay, isInverted] = await align4system(avgSpeakerWithHPFIdx, subwooferWithLPFIdx,
-                                                             loDelayLimit, hiDelayLimit,
-                                                             alignXO);
+      const [requiredDelay, isInverted] = await align4system(avgSpeakerIdx, subwooferIdx,
+                                                             startFreq, endFreq,
+                                                             loDelayLimit, hiDelayLimit);
       // cleanup in reverse order of creation
-      await postDelete(subwooferWithLPFIdx);
-      await postDelete(avgSpeakerWithHPFIdx);
+      await postDelete(subwooferIdx);
       await postDelete(avgSpeakerIdx);
       // apply optimal delay
       const subMoves = requiredDelay / 1000;
@@ -3212,13 +3211,9 @@
         }
       }
     }
-    async function align4system(ind1, ind2, loDelay, hiDelay, alignXO) {
+    async function align4system(ind1, ind2, start, end, loDelay, hiDelay) {
       console.info(`Proximity based delay range: ${loDelay.toFixed(2)}ms <-> ${hiDelay.toFixed(2)}ms`);
-      console.info(`Alignment frequency: ${alignXO.toFixed(2)}hz`);
-      // use an octave on either side of the alignment XO as evaluation range
-      const start = Math.round(alignXO / 2);
-      const end = Math.round(alignXO * 2);
-      let isInverted = false, requiredDelay = NaN, maxSum = -Infinity;
+      let isInverted = false, requiredDelay = NaN, minSum = Infinity;
       await postNext('Smooth', ind1, { smoothing: "1/48" });
       await postNext('Smooth', ind2, { smoothing: "1/48" });
       await postAlign('Reset all');
@@ -3226,8 +3221,9 @@
       await postSafe("http://localhost:4735/alignment-tool/index-b", ind2, "selected as measurement B");
       await postSafe("http://localhost:4735/alignment-tool/remove-time-delay", false, "Value set"); // prevents messing with delays
       // make sure level differences do not affect alignment; no need to revert since these temp measurements will only be deleted
-      const gainA = 75.0 - await getSPL(ind1, Math.round(alignXO), end); // average speaker
-      const gainB = 75.0 - await getSPL(ind2, start, Math.round(alignXO)); // subwoofer
+      const midFreq = Math.sqrt(start * end); // geometric mean
+      const gainA = 75.0 - await getSPL(ind1, Math.round(midFreq), end); // average speaker
+      const gainB = 75.0 - await getSPL(ind2, start, Math.round(midFreq)); // subwoofer
       await postSafe("http://localhost:4735/alignment-tool/gain-a", gainA, "Value set");
       await postSafe("http://localhost:4735/alignment-tool/gain-b", gainB, "Value set");
       console.info("Starting...")
@@ -3243,14 +3239,15 @@
           const tempSumInv = await fetchAlign('aligned-frequency-response?smoothing=1%2F1&ppo=96');
           const tempSumArrayInv = response2array(tempSumInv, start, end);
           const tempMagSumInv = tempSumArrayInv.reduce((acc, val) => acc + val, 0);
-          if (tempMagSum < tempMagSumInv) {
+          if (tempMagSum > tempMagSumInv) {
             tempMagSum = tempMagSumInv;
             tempSumInverted = true;
           }
           await postSafe("http://localhost:4735/alignment-tool/invert-b", false, "Value set");
         }
-        if (maxSum < tempMagSum) {
-          maxSum = tempMagSum;
+        // since alignment is slope-less, find highest cancellation for optimal alignment with crossover slopes
+        if (minSum > tempMagSum) {
+          minSum = tempMagSum;
           requiredDelay = i;
           isInverted = tempSumInverted;
         }
