--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -2020,13 +2020,14 @@
         console.infoUpdate(`Spatially averaging channel ${commandId[i]} using <${indices.length}> microphone position(s)...`);
         if (indices.length > 1) {
           await postNext('Cross corr align', indices);
-        }
-        // average
-        if (indices.length === 1) {
-          commandId[i].startsWith("SW") ? await genSub(indices[0]) : await genSpeaker(indices[0]); // nothing to average
+          await postNext('Magn plus phase average', indices); // do not use VA, it reduces SPL!
+          // apply widest IR window to average
+          const [leftWindow, rightWindow] = await getMaxIRWindow(indices);
+          await postSafe(`${baseUrl}/${avgIdx}/ir-windows`, { leftWindowWidthms: leftWindow,
+                                                            rightWindowWidthms: rightWindow }, "Update processed");
         }
         else {
-          await postNext('Magn plus phase average', indices); // do not use VA, it reduces SPL!
+          commandId[i].startsWith("SW") ? await genSub(indices[0]) : await genSpeaker(indices[0]); // nothing to average
         }
         await fetch_mREW(avgIdx, 'PUT', { title: `${commandId[i]}-avg` });
         await postNext('Smooth', avgIdx, { smoothing: "1/48" });
@@ -2649,13 +2650,6 @@
           console.warn(`${cmdIds} initial XO below usable XO range - shifted: ${initialXO}hz → ${customCrossover[i]}hz`);
         }
       }
-    }
-    function getGeomMean(freqArray) {
-      let arrProd = 1;
-      for (let i = 0; i < freqArray.length; i++) {
-        arrProd *= freqArray[i];
-      }
-      return Math.pow(arrProd, 1 / freqArray.length);
     }
     async function optimizeSubDelay() {
       console.log("Optimizing subwoofer delay for ALL speakers...");
