--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -525,7 +525,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.7.1</span></h2>
+  <h2>A1Evo <strong>1-click</strong> Audyssey Optimization Tool <span class="version-number">MJ Custom - PureEQ v2.7.2</span></h2>
   <h3>Steps</h3>
   <ol>
     <li class="smaller-font">Download and install the free room correction software Room EQ Wizard (v5.40 Beta) in your computer
@@ -730,7 +730,7 @@
     let minXO = 40, maxXO = 250, previousDelay = null, swChannelCount = 0, dialogueEnhancer = false;
     const freqIndex = [40, 60, 80, 90, 100, 110, 120, 150, 200, 250]; // common denominator
     const customLevel = [], customDistance = [], customCrossover = [];
-    const mSec = [], invertSub = [], commandId = [], minDelayRangeSpan = 6;
+    const mSec = [], invertSub = [], commandId = [], minDelayRangeSpan = 10;
     const m3dBPoints = {}, cmdIdIndices = {}, cmdIdFilterIndices = {};
     const cmdIdMLPIndices = {}, cmdIdAVGIndices = {};
     const cmdIdMLPIndicesEQ = {}, cmdIdAVGIndicesEQ = {};
@@ -3027,20 +3027,20 @@
       }
       combinedSubIRs4AF[pos] = impulseArray;
     }
-    async function directional2standard() {
+    async function directional2standard(start=10, end=320) {
       console.warn("Converting from directional to standard bass for a better sound experience...");
       let measurements = await fetch_mREW();
       let mCount = Object.keys(measurements).length;
-      // isolate SW commandIds, mlp indices with 250hz LPF & first IR peak times
+      // isolate SW commandIds, bandpassed response & first IR peak times
       const swCmdIdsWithIRPeak = {};
       const swCmdIdsWithLPFIndices = {};
       for (let i = nSpeakers + 1; i <= nSpeakers + nSubs; i++) {
         const mlpIdx = cmdIdIndices[commandId[i]][0];
-        const mlpWithLPF = await genSub(mlpIdx, 250); // benefits cases where SW goes very high in frequency
-        const mlpWithLPFIdx = Object.keys(mlpWithLPF.results)[0];
-        await fetch_mREW(mlpWithLPFIdx, 'PUT', { title: measurements[mlpIdx].title }); // reuse same name
-        swCmdIdsWithIRPeak[commandId[i]] = await getFirstIRPeak(mlpWithLPFIdx);
-        swCmdIdsWithLPFIndices[commandId[i]] = mlpWithLPFIdx;
+        const mlpWithBPF = await genBandpassedResponse(mlpIdx, start, end); // cleanup LF noise and irrelevant HF
+        const mlpWithBPFIdx = Object.keys(mlpWithBPF.results)[0];
+        await fetch_mREW(mlpWithBPFIdx, 'PUT', { title: measurements[mlpIdx].title }); // reuse same name
+        swCmdIdsWithIRPeak[commandId[i]] = await getFirstIRPeak(mlpWithBPFIdx);
+        swCmdIdsWithLPFIndices[commandId[i]] = mlpWithBPFIdx;
       }
       measurements = await fetch_mREW(); // update with the newly LPF-ed measurements
       // sort subs using first IR peak time
@@ -3048,16 +3048,11 @@
       console.info(`Alignment order based on proximity: ${sortedSwCmdIds}`);
       let currSubIdx = swCmdIdsWithLPFIndices[sortedSwCmdIds[0]];
       let cmdIds = measurements[currSubIdx].title.slice(0, -1);
-      let startFreq = Math.round(await getAbsLow3dBPoint(currSubIdx));
-      let endFreq = Math.round(await getAbsHigh3dBPoint(currSubIdx));
       const refSubIRPeak = await getFirstIRPeak(currSubIdx);
       for (let i = 1; i < sortedSwCmdIds.length; i++) {
         const thisSubIdx = swCmdIdsWithLPFIndices[sortedSwCmdIds[i]];
         const thisSubCmdId = measurements[thisSubIdx].title.slice(0, -1);
         const thisSubNumber = parseInt(thisSubCmdId.slice(-1));
-        // use aggregate -3dB points as evaluation range
-        startFreq = Math.min(startFreq, Math.round(await getAbsLow3dBPoint(thisSubIdx)));
-        endFreq = Math.max(endFreq, Math.round(await getAbsHigh3dBPoint(thisSubIdx)));
         // set delay limits based on first IR peak delta to prioritize time alignment
         const thisSubIRPeak = await getFirstIRPeak(thisSubIdx);
         const IRPeakDelta = 1000 * (refSubIRPeak - thisSubIRPeak);
@@ -3067,9 +3062,9 @@
         const [loDelay, hiDelay] = getDelayRangeOf(mSec[nSpeakers + thisSubNumber], nSpeakers + 1, nSpeakers + nSubs);
         loDelayLimit = Math.min(Math.max(loDelayLimit, loDelay), hiDelay);
         hiDelayLimit = Math.min(Math.max(hiDelayLimit, loDelay), hiDelay);
-        console.log(`Aligning ${thisSubCmdId} to ${cmdIds} over ${startFreq}hz-${endFreq}hz...`);
+        console.log(`Aligning ${thisSubCmdId} to ${cmdIds}...`);
         const [requiredDelay, isInverted, sumIndex] = await alignMsub(currSubIdx, thisSubIdx,
-                                                                      startFreq, endFreq,
+                                                                      start, end,
                                                                       loDelayLimit, hiDelayLimit);
         currSubIdx = sumIndex;
         cmdIds += ` & ${thisSubCmdId}`;
@@ -3353,6 +3348,28 @@
           "enabled": true,
           "isAuto": false,
           "frequency": freq,
+          "shape": "BU",
+          "slopedBPerOctave": 12
+        }]
+      }, "Filters set");
+      return await postNext('Generate predicted measurement', i);
+    }
+    async function genBandpassedResponse(i, lowFreq, highFreq) {
+      await postSafe(`${baseUrl}/${i}/filters`, {
+        filters: [{
+          "index": 21,
+          "type": "Low pass",
+          "enabled": true,
+          "isAuto": false,
+          "frequency": lowFreq,
+          "shape": "L-R",
+          "slopedBPerOctave": 24
+        },
+        { "index": 22,
+          "type": "High pass",
+          "enabled": true,
+          "isAuto": false,
+          "frequency": highFreq,
           "shape": "BU",
           "slopedBPerOctave": 12
         }]
